[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
pygame = "^2.1.2"
numpy = "^1.24.1"
tcod = "^14.0.0"
pylint = "^2.15.9"
pycodestyle = "^2.10.0"
autopep8 = "^2.0.1"
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
pygame-gui = "^0.6.7"
coverage = "^7.0.1"
pyinstaller = "^5.7.0"
pyyaml = "^6.0"
types-pyyaml = "^6.0.12.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "pygame_gui"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"